<resources>
    <string name="title_activity_login">Log in</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <string name="preference_key_offscreen_limit" translatable="false">offscreen_limit</string>
    <string name="preference_key_enable_beta" translatable="false">enable_beta</string>
    <string name="preference_key_save_path" translatable="false">save_path</string>
    <string name="preference_key_fake_icon" translatable="false">fake_icon</string>
    <string name="preference_key_title_type" translatable="false">title_type_str</string>
    <string name="preference_key_default_zoom" translatable="false">default_zoom</string>
    <string name="preference_key_theme_select" translatable="false">theme_select</string>
    <string name="preference_key_black_theme" translatable="false">black_theme</string>
    <string name="preference_key_cache" translatable="false">cache</string>
    <string name="preference_key_use_account_tag" translatable="false">use_account_tags</string>
    <string name="preference_key_use_rtl" translatable="false">use_rtl</string>
    <string name="preference_key_show_titles" translatable="false">show_titles</string>
    <string name="preference_key_exact_title_match" translatable="false">precise_tag</string>
    <string name="preference_key_hide_multitasking" translatable="false">hide_multitasking</string>
    <string name="preference_key_site_mirror" translatable="false">site_mirror</string>
    <string name="preference_key_api_key" translatable="false">api_key</string>
    <string name="preference_key_language" translatable="false">key_language</string>
    <string name="preference_key_disable_lock" translatable="false">disable_lock</string>
    <string name="preference_key_max_history_size" translatable="false">max_history_size</string>
    <string name="preference_key_zoom_one_column" translatable="false">zoom_one_column</string>
    <string name="preference_key_maximum_notification" translatable="false">maximum_notification</string>
    <string name="preference_key_keep_history" translatable="false">keep_history</string>
    <string name="preference_key_override_volume" translatable="false">volume_override</string>
    <string name="preference_key_remove_ignored" translatable="false">remove_ignored</string>
    <string name="preference_key_check_update" translatable="false">check_update</string>
    <string name="preference_key_update" translatable="false">update</string>
    <string name="preference_key_status_screen" translatable="false">status_screen</string>
    <string name="preference_key_col_screen" translatable="false">col_screen</string>
    <string name="preference_key_data_screen" translatable="false">data_screen</string>
    <string name="preference_key_fetch_metadata" translatable="false">fetch_metadata</string>
    <string name="preference_key_has_credentials" translatable="false">has_credentials</string>
    <string name="preference_key_version" translatable="false">version</string>
    <string name="preference_key_bug" translatable="false">bug</string>
    <string name="preference_key_copy_settings" translatable="false">copy_settings</string>
    <string name="preference_key_export" translatable="false">export</string>
    <string name="preference_key_import" translatable="false">import</string>
    <string name="preference_key_cookie" translatable="false">cookie</string>
    <string name="preference_key_change_page_buttons" translatable="false">change_page_buttons</string>
    <string name="preference_key_favorite_limit" translatable="false">favorite_limit</string>
    <string name="preference_key_copy_logs" translatable="false">key_copy_logs</string>
    <string name="key_default_value" translatable="false">default_value</string>
    <string name="key_local_sort" translatable="false">local_sort_type</string>
    <string name="key_by_popular" translatable="false">is_by_popular</string>
    <string name="key_column_count" translatable="false">column_count</string>
    <string name="key_only_language" translatable="false">only_language</string>
    <string name="key_max_id" translatable="false">max_id</string>
    <string name="key_ignore_tags" translatable="false">ignore_tags</string>
    <string name="key_column_port_hist" translatable="false">column_port_hist</string>
    <string name="key_column_land_hist" translatable="false">column_land_hist</string>
    <string name="key_column_port_main" translatable="false">column_port_main</string>
    <string name="key_column_land_main" translatable="false">column_land_main</string>
    <string name="key_column_port_down" translatable="false">column_port_down</string>
    <string name="key_column_land_down" translatable="false">column_land_down</string>
    <string name="key_column_port_favo" translatable="false">column_port_favo</string>
    <string name="key_column_land_favo" translatable="false">column_land_favo</string>
    <string name="key_column_port_stat" translatable="false">column_port_stat</string>
    <string name="key_column_land_stat" translatable="false">column_land_stat</string>
    <string name="key_infinite_scroll_main" translatable="false">key_infinite_scroll</string>
    <string name="key_infinite_scroll_favo" translatable="false">infinite_scroll_favo</string>
    <string name="empty_circle" translatable="false">○</string>
    <string name="full_circle" translatable="false">◉</string>
    <string name="key_mobile_usage" translatable="false">mobile_usage</string>
    <string name="key_wifi_usage" translatable="false">wifi_usage</string>
    <string name="app_version_format" formatted="true" translatable="false">NClientV3 %s</string>
    <string name="hashtag" translatable="false">#</string>
    <string name="page_format" formatted="true" translatable="false">%d/%d</string>
    <string name="percentage_format" formatted="true" translatable="false">%d%%</string>
    <string name="page_switcher_placeholder" translatable="false">0/0</string>
    <string name="page_placeholder" translatable="false">999/999</string>
    <string name="dash" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    <string name="setting_on_ignore_tags">Other tags won\'t be queried when a tag is selected from the gallery menu (except language)</string>
    <string name="setting_off_ignore_tags">Other tags will be queried when a tag is selected from the gallery menu</string>
    <string name="setting_on_use_account_tag">Use the account tags into the search query (Local tags will have priority)</string>
    <string name="setting_off_use_account_tag">Account tags will be ignored for the query</string>
    <string name="change_theme">Change theme</string>
    <string name="clear_cache">Clear cache</string>
    <string name="infinite_scroll">Infinite scroll</string>
    <string name="ignore_tags">Ignore other tags</string>
    <string name="use_account_tag">Use tags from account</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_zoom">Zoom Activity</string>
    <string name="title_activity_tag_filter">Tag Filter</string>
    <string name="title_activity_api_key">API key</string>
    <string name="parodies">Parodies</string>
    <string name="characters">Characters</string>
    <string name="tags">Tags</string>
    <string name="artists">Artists</string>
    <string name="groups">Groups</string>
    <string name="languages">Languages</string>
    <string name="categories">Categories</string>
    <string name="unknown">Unknown</string>
    <string name="channel1_name">Download Gallery</string>
    <string name="channel2_name">Create PDF</string>
    <string name="channel3_name">Create ZIP</string>
    <string name="channel1_description">Used to show progress of the download of a gallery</string>
    <string name="channel2_description">Used to show progress of the creation of the PDF</string>
    <string name="channel3_description">Used to show progress of the creation of the ZIP</string>
    <string name="channel2_title">Creating PDF:</string>
    <string name="channel3_title">Creating ZIP:</string>
    <string name="tags_max_reached" formatted="true">You can have a maximum of %d selected tags.</string>
    <string name="only_english">Only english</string>
    <string name="only_japanese">Only japanese</string>
    <string name="only_chinese">Only chinese</string>
    <string name="all_languages">All languages</string>
    <string name="unknown_language">Unknown language</string>
    <string name="setting_api_key_title">API key</string>
    <string name="setting_api_key_summary_missing">Create an API key on the website account settings page, then paste it into the app.</string>
    <string name="setting_api_key_summary_valid">Saved and validated. Open this entry if you want to replace or remove it.</string>
    <string name="setting_api_key_summary_invalid">A saved API key exists, but it is no longer valid. Open this entry to replace or remove it.</string>
    <string name="login_api_key_intro_title">Use an API key</string>
    <string name="login_api_key_intro_message">The nhentai site now uses API keys for app access. To log in, open the account settings page in your browser, create an API key there, then come back and paste the key value here.</string>
    <string name="login_open_api_key_page">Open API key page</string>
    <string name="login_api_key_input_title">Paste your API key</string>
    <string name="login_api_key_input_message">The key is validated against the v2 API before it is saved.</string>
    <string name="login_api_key_hint">API key</string>
    <string name="login_validate_and_save">Validate and save</string>
    <string name="login_api_key_saved">API key saved</string>
    <string name="login_api_key_invalid">Invalid API key</string>
    <string name="login_api_key_empty">Paste an API key first</string>
    <string name="login_api_key_removed">Saved API key removed</string>
    <string name="login_status_api_key_saved">A validated API key is currently saved on this device.</string>
    <string name="login_status_api_key_invalid">A saved API key exists, but it needs to be replaced or removed.</string>
    <string name="remove_api_key">Remove API key</string>
    <string name="favorite_online_manga">Favorite online galleries</string>
    <string name="online_tags">Online tags</string>
    <string name="add_to_online_favorite">Add to online favorites</string>
    <string name="remove_from_online_favorites">Remove from online favorites</string>
    <string name="add_to_online_blacklist">Add to online blacklist?</string>
    <string name="tag_already_in_blacklist">Tag already in blacklist</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="settings">Settings</string>
    <string name="related">Related</string>
    <string name="failed">Failed</string>
    <string name="search">Search</string>
    <string name="prev">Previous</string>
    <string name="share">Share</string>
    <string name="image">Image</string>
    <string name="next">Next</string>
    <string name="profile_picture">Profile picture</string>
    <string name="summary_total_label">Total</string>
    <string name="summary_successful_label">Successful</string>
    <string name="summary_failed_label">Failed</string>
    <string name="summary_failed_title">Failed Galleries (will retry):</string>
    <string name="summary_deleted_label">Deleted</string>
    <string name="summary_deleted_title">Deleted from server:</string>
    <string name="recent_favorites">Recent Favorites</string>
    <string name="recent_comments">Recent Comments</string>
    <string name="favorite_tags">Favorite Tags</string>
    <string name="about_user">About</string>
    <string name="staff">Staff</string>
    <string name="unable_to_load_profile">Unable to load profile</string>
</resources>